correct spacings of body, lists. and border of hr

--- a/userContent/static/style.css
+++ b/userContent/static/style.css
@@ -6,14 +6,14 @@ html {
 }
 
 body {
-	width: 99%;
+	width: 98%;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 14px;
 	line-height: 20px;
 	color: #333333;
-	padding: 0.25em 0.25em 0em 0.25em;
-	margin: 0.25em 0.25em 0em 0.25em;
-	height: 100%;
+	padding: 0.25em;
+	margin: 0.25em auto;
+	/*height: 100%;*/
 }
 
 pre {
@@ -77,10 +77,11 @@ ul li {
 ul li a {
 	background: #fafafa;
 	border: 1px solid #ddd;
-	margin: 0 0.5em 0.2em 0;
+	margin: 0 0.5em 0.3em 0;
 	border-radius: 0.5em;
 	padding: 0.15em 0.5em;
-	line-height: 2.1em;
+	line-height: 1.5em;
+	display: block;
 }
 
 nav ul li {
@@ -153,6 +154,7 @@ th {
 }
 
 hr {
+	border-top: none;
 	border-bottom: 1px solid #d70a53;
 	margin-bottom: 1em;
 }
